# aoc2025

./: .gitignore  README.md
.github/: copilot-instructions.md
data/examples/: .gitkeep  01.txt
data/inputs/: .gitkeep
python/: pyproject.toml
python/src/aoc2025/: __init__.py  __main__.py  cli.py  input.py  scaffold.py
python/src/aoc2025/days/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
python/src/aoc2025/utils/: __init__.py  arrays.py  direction.py  grid.py  parsing.py  pathfinding.py
python/tests/: __init__.py  conftest.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py
rust/: Cargo.toml
rust/src/: input.rs  lib.rs  main.rs  scaffold.rs
rust/src/days/: day01.rs  mod.rs
rust/src/utils/: direction.rs  grid.rs  mod.rs  parsing.rs  pathfinding.rs
